service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symbiosis-svc
spec:
  type: ClusterIP
  selector:
    app: symbiosis
  ports:
  - port: 3000
    targetPort: 3000
