ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symbiosis-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: symbiosis.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: symbiosis-svc
            port:
              number: 3000
